@@ -1,8 +1,8 @@
-FROM fedora:22
-MAINTAINER Michal Karm Babacek <karm@email.com>
+FROM fedora:24
+MAINTAINER Michal Karm Babacek <karm@email.cz
 LABEL description="Codename Feed: Sinkit Core POC"
 
-ENV DEPS            java-1.8.0-openjdk-devel.x86_64 unzip wget gawk sed
+ENV DEPS            java-1.8.0-openjdk-devel.x86_64 unzip wget gawk sed jna.x86_64 jsch-agent-proxy-usocket-jna.noarch
 ENV JBOSS_HOME      "/opt/sinkit/wildfly"
 ENV JAVA_HOME       "/usr/lib/jvm/java-1.8.0"
 
@@ -13,12 +13,12 @@ RUN mkdir -p /opt/sinkit && chown sinkit /opt/sinkit && chgrp sinkit /opt/sinkit
 WORKDIR /opt/sinkit
 USER sinkit
 
-ENV WILDFLY_VERSION 10.0.0.CR5-SNAPSHOT
+ENV WILDFLY_VERSION 10.1.0.Final-SNAPSHOT
 ENV HIBERNATE_HQL_LUCENE_VERSION 1.3.0.Alpha2
 ENV HIBERNATE_HQL_PARSER_VERSION 1.3.0.Alpha2
 ENV STRINGTEMPLATE_VERSION 3.2.1
 ENV ANTLR_RUNTIME_VERSION 3.4
-ENV VERSION_INFINISPAN 8.1.0.Final
+ENV VERSION_INFINISPAN 8.2.2.Final
 ENV MAVEN_CENTRAL http://central.maven.org/maven2
 
 # ADD would run every rebuild
@@ -49,6 +49,9 @@ wget ${MAVEN_CENTRAL}/org/infinispan/infinispan-query-dsl/${VERSION_INFINISPAN}/
 wget ${MAVEN_CENTRAL}/org/infinispan/infinispan-objectfilter/${VERSION_INFINISPAN}/infinispan-objectfilter-${VERSION_INFINISPAN}.jar -O ${INFINISPAN_MODULE_DIR}/infinispan-objectfilter-${VERSION_INFINISPAN}.jar && \
 wget ${MAVEN_CENTRAL}/org/infinispan/infinispan-query/${VERSION_INFINISPAN}/infinispan-query-${VERSION_INFINISPAN}.jar -O ${INFINISPAN_MODULE_DIR}/infinispan-query-${VERSION_INFINISPAN}.jar
 
+# Patched Infinispan - very dirty :-(
+# ADD infinispan-core-${VERSION_INFINISPAN}.jar /opt/sinkit/wildfly-${WILDFLY_VERSION}/modules/system/layers/base/org/infinispan/main/infinispan-core-${VERSION_INFINISPAN}.jar
+
 # Circle CI builds and tests the archive, so no need for additional checks here.
 ADD ear/target/sinkit-ear.ear /opt/sinkit/wildfly-${WILDFLY_VERSION}/standalone/deployments/
 
@@ -64,6 +67,15 @@ EXPOSE 54200/udp
 EXPOSE 45688/udp
 EXPOSE 45700/udp
 EXPOSE 7800/udp
+EXPOSE 7800/tcp
+EXPOSE 7801/udp
+EXPOSE 7801/tcp
+EXPOSE 7600/udp
+EXPOSE 7600/tcp
+EXPOSE 7601/udp
+EXPOSE 7601/tcp
+EXPOSE 57600/udp
+EXPOSE 57600/tcp
 
 ENV WF_CONFIG /opt/sinkit/wildfly/standalone/configuration/standalone-ha.xml
 
@@ -73,19 +85,9 @@ RUN echo 'JAVA_OPTS="\
  -server \
  -Xms${SINKIT_MS_RAM:-6g} \
  -Xmx${SINKIT_MX_RAM:-6g} \
- -XX:+UseLargePages \
- -XX:LargePageSizeInBytes=2m \
  -XX:+UseConcMarkSweepGC \
  -XX:+HeapDumpOnOutOfMemoryError \
  -XX:HeapDumpPath=/opt/sinkit \
- -verbose:gc \
- -Xloggc:"/opt/sinkit/wildfly/standalone/log/gc.log" \
- -XX:+PrintGCDetails \
- -XX:+PrintGCDateStamps \
- -XX:+UseGCLogFileRotation \
- -XX:NumberOfGCLogFiles=5 \
- -XX:GCLogFileSize=200M \
- -XX:-TraceClassUnloading \
 "' >> /opt/sinkit/wildfly/bin/standalone.conf
 RUN mkdir -p /opt/sinkit/wildfly/standalone/log/
 ADD sinkit.sh /opt/sinkit/
